--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,53 @@
     <title>RailsApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <!-- Required meta tags -->
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Bootstrap jquery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <!-- Font Awsome -->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">  
   </head>
 
   <body>
-    <%= yield %>
+  <!-- NavBar -->
+  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+ 
+  <a class="navbar-brand" href="#"><i class="fa fa-diamond"></i>IɴsᴛᴀRᴀɪʟs</a>
+    <%if current_user%>
+     <div class="d-flex flex-row order-2 order-lg-3">
+        <ul class="navbar-nav flex-row">
+          <li class="nav-item"><a class="nav-link px-2" href="/posts/new"><i class="fa fa-upload"></i></a></li>
+             <li class="nav-item"><a class="nav-link px-2" href="/profile"><i class="fa fa-user-circle"></i>&nbsp<%=current_user.first_name%></a></li>
+            <li class="nav-item"><a class="nav-link px-2" href="<%=logout_path %>"><i class="fa fa-sign-out"></i></a></li>
+          </ul>  
+        </div>
+                  
+
+      <div class="collapse navbar-collapse order-3 order-lg-2" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="/posts"><i class="fa fa-home"></i></a></li>
+           <li class="nav-item"><a class="nav-link" href="/accounts"><i class="fa fa-user-plus"></i></a></li>    
+         </ul>
+         <!-- Search form -->
+        <input class="form-control search" type="text" placeholder="Search" aria-label="Search">
+       <%end%>
+   </div>
+ </nav>
+
+ <div class="container">
+    
+ <%=yield %>
+</div>
   </body>
 </html>
