--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,37 @@
  *= require_tree .
  *= require_self
  */
+
+
+ 
+ a.navbar-brand {
+     padding-left: 50px;
+     padding: 15px 15px;
+     font-size: 20px;
+     line-height: 20px;
+     margin-left: 200px;
+ }
+ 
+ a.nav-link {
+     padding: 15px;
+     margin: 0px 10px 0px-15px;
+     font-size: 18px;
+ }
+ .navbar {
+     background-color: white;
+     border-bottom: 1px solid rgb(211, 211, 211);
+ }
+ 
+ .navbar-nav {
+     margin-right: 250px;
+ }
+ 
+ .form-control.search {
+     position: absolute;
+     left: 620px;
+     width: 150px;
+     height: 30px;
+     text-align: center;
+     
+ }
+ 
