--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -23,7 +23,8 @@
       <%end%>
 
         <div class="profile-stats"><%=@account.posts.count%> posts</div>
-       
+        <div class="profile-stats"> <%=@account.followers.count%> <%= link_to "followers",  class: "text-dark" %></div>
+        <div class="profile-stats"> <%=@account.following.count%> <%= link_to "following",  class: "text-dark" %></div><br>
         <p> <p><br>
         
         <p> Bio: </p>
@@ -43,7 +44,7 @@
          <div class="hvrbox">
           <h1 class="hvrbox-layer_bottom"> <h1 class="makingsure"><%= image_tag post.image%></h1></h1>
              <div class="hvrbox-layer_top">
-
+             <div class="hvrbox-text"><span class="hoverspace"><i class="fa fa-heart"></i>&nbsp 0 </span>  <span class="hoverspace"><i class="fa fa-comment"></i> <%=post.comments.count%> </span></div>
              <%end%>
             
             </div>
@@ -52,6 +53,5 @@
           
        </div>
      <%end%>
-
 
      
