--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,35 +22,35 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">  
   </head>
 
-  <body>
   <!-- NavBar -->
+  <body>
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
  
-  <a class="navbar-brand" href="#"><i class="fa fa-diamond"></i>IɴsᴛᴀRᴀɪʟs</a>
-    <%if current_user%>
-     <div class="d-flex flex-row order-2 order-lg-3">
-        <ul class="navbar-nav flex-row">
-          <li class="nav-item"><a class="nav-link px-2" href="/posts/new"><i class="fa fa-upload"></i></a></li>
-             <li class="nav-item"><a class="nav-link px-2" href="/profile"><i class="fa fa-user-circle"></i>&nbsp<%=current_user.first_name%></a></li>
-            <li class="nav-item"><a class="nav-link px-2" href="<%=logout_path %>"><i class="fa fa-sign-out"></i></a></li>
-          </ul>  
-        </div>
-                  
+    <a class="navbar-brand" href="#"><i class="fa fa-diamond"></i>IɴsᴛᴀRᴀɪʟs</a>
+      <%if current_user%>
+       <div class="d-flex flex-row order-2 order-lg-3">
+          <ul class="navbar-nav flex-row">
+            <li class="nav-item"><a class="nav-link px-2" href="/posts/new"><i class="fa fa-upload"></i></a></li>
+               <li class="nav-item"><a class="nav-link px-2" href="/profile"><i class="fa fa-user-circle"></i>&nbsp<%=current_user.first_name%></a></li>
+              <li class="nav-item"><a class="nav-link px-2" href="<%=logout_path %>"><i class="fa fa-sign-out"></i></a></li>
+            </ul>  
+          </div>
+                    
 
-      <div class="collapse navbar-collapse order-3 order-lg-2" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="/posts"><i class="fa fa-home"></i></a></li>
-           <li class="nav-item"><a class="nav-link" href="/accounts"><i class="fa fa-user-plus"></i></a></li>    
-         </ul>
-         <!-- Search form -->
-        <input class="form-control search" type="text" placeholder="Search" aria-label="Search">
-       <%end%>
-   </div>
- </nav>
+        <div class="collapse navbar-collapse order-3 order-lg-2" id="navbarNavDropdown">
+        <ul class="navbar-nav mr-auto">
+              <li class="nav-item"><a class="nav-link" href="/posts"><i class="fa fa-home"></i></a></li>
+             <li class="nav-item"><a class="nav-link" href="/accounts"><i class="fa fa-user-plus"></i></a></li>    
+           </ul>
+           <!-- Search form -->
+          <input class="form-control search" type="text" placeholder="Search" aria-label="Search">
+         <%end%>
+     </div>
+   </nav>
 
- <div class="container">
+   <div class="container">
     
- <%=yield %>
-</div>
+       <%=yield %>
+     </div>
   </body>
 </html>
